pratique/2021-p2-f2-sanduiche.out-comp.txt
2021-p2-f2-sanduiche.cpp: In function ‘int count_sandwiches()’:
2021-p2-f2-sanduiche.cpp:17:13: error: no match for ‘operator!’ (operand type is ‘std::bitset<21>’)
   17 |         if (!dp[mask]) continue;
      |             ^~~~~~~~~
2021-p2-f2-sanduiche.cpp:17:13: note: candidate: ‘operator!(bool)’ (built-in)
2021-p2-f2-sanduiche.cpp:17:13: note:   no known conversion for argument 1 from ‘std::bitset<21>’ to ‘bool’
2021-p2-f2-sanduiche.cpp:33:13: error: no match for ‘operator+=’ (operand types are ‘int’ and ‘std::bitset<21>’)
   33 |         ans += dp[i];
      |         ~~~~^~~~~~~~
